<resources>
    <string name="app_name">Purchase Noti App</string>
    <string name="items_purchased_regularly">Items purchased regularly</string>
    <string name="empty_item_message">No items.\nPlease add items with the [ + ] button.</string>
    <string name="next_purchase_date">Next Purchase Date: </string>
    <string name="purchase_term">Purchase Term: </string>
    <string name="enter_purchase_item">Enter the item purchased regularly</string>
    <string name="item_name">Item name</string>
    <string name="item_purchase_term">Item purchase term</string>
    <string name="last_purchased_date">Last purchased date</string>
    <string name="years_label">year(s)</string>
    <string name="months_label">month(s)</string>
    <string name="days_label">day(s)</string>
    <string name="item_name_error">No item name. Item not saved.</string>
    <string name="delete_item">Delete purchase item</string>
    <string name="edit_item">Edit purchase item</string>
    <string name="product_recommendation">Product recommendation</string>
    <string name="years">years </string>
    <string name="months">months </string>
    <string name="days">days </string>
    <string name="year">year </string>
    <string name="month">month </string>
    <string name="day">day </string>
    <string name="refresh_message">There was an error getting the product list.\nPlease enter refresh button.</string>
    <string name="refresh">Refresh button</string>
    <string name="action_amazon_domain">Amazon domain</string>
    <string name="action_sort_by">Sort by</string>
    <string name="most_recent">Most recent</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="featured">Featured</string>
    <string name="average_review">Average review</string>
    <string name="australia">Australia</string>
    <string name="brazil">Brazil</string>
    <string name="canada">Canada</string>
    <string name="france">France</string>
    <string name="germany">Germany</string>
    <string name="india">India</string>
    <string name="italy">Italy</string>
    <string name="japan">Japan</string>
    <string name="mexico">Mexico</string>
    <string name="netherlands">Netherlands</string>
    <string name="spain">Spain</string>
    <string name="uae">UAE</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states">United States</string>
    <string name="purchase_item">Purchase item</string>
    <string name="time_to_buy">Time to buy</string>
    <string name="time_to_buy_item">It\'s time to buy %s.</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">Make sound and pop on screen</string>
    <string name="admob_app_id">ca-app-pub-4417956264264439~4871954749</string>
    <string name="banner_ad_unit_id">ca-app-pub-4417956264264439/3269252559</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
</resources>