<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/input_dialog_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:padding="@dimen/default_padding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/input_dialog_padding"
            android:text="@string/item_purchase_term"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/small_padding"
                    android:text="@string/years_label" />

                <NumberPicker
                    android:id="@+id/year_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/number_picker_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/small_padding"
                    android:descendantFocusability="blocksDescendants" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/small_padding"
                    android:text="@string/months_label" />

                <NumberPicker
                    android:id="@+id/month_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/number_picker_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/small_padding"
                    android:descendantFocusability="blocksDescendants" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/small_padding"
                    android:text="@string/days_label" />

                <NumberPicker
                    android:id="@+id/day_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/number_picker_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/small_padding"
                    android:descendantFocusability="blocksDescendants" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/input_dialog_padding"
            android:paddingTop="@dimen/label_text_padding_top"
            android:paddingEnd="@dimen/input_dialog_padding"
            android:text="@string/last_purchased_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:targetApi="lollipop" />
    </LinearLayout>
</layout>