<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_background"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_purchase_item_name"
                style="@style/TitleTextStyle"
                android:layout_toStartOf="@id/iv_edit"
                android:layout_toLeftOf="@id/iv_edit"
                tools:text="Purchase Item A" />

            <ImageView
                android:id="@+id/iv_edit"
                style="@style/EditButtonStyle"
                android:layout_toStartOf="@id/iv_delete"
                android:layout_toLeftOf="@id/iv_delete"
                android:contentDescription="@string/edit_item" />

            <ImageView
                android:id="@+id/iv_delete"
                style="@style/DeleteButtonStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/delete_item" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_next_purchase_date"
                style="@style/LabelTextStyle"
                android:layout_toStartOf="@id/tv_d_day"
                android:layout_toLeftOf="@id/tv_d_day"
                android:gravity="center|end"
                android:text="@string/next_purchase_date" />

            <TextView
                android:id="@+id/tv_d_day"
                style="@style/DateTextStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center|end"
                tools:text="20-07-15 (D-5)" />
        </RelativeLayout>
    </LinearLayout>
</layout>