<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_purchase_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/default_padding"
                    android:layout_toStartOf="@id/iv_edit"
                    android:layout_toLeftOf="@id/iv_edit"
                    android:padding="@dimen/default_padding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/item_name_text_size"
                    android:textStyle="bold"
                    tools:text="Purchase Item A" />

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/title_layout_padding"
                    android:layout_marginRight="@dimen/title_layout_padding"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/edit_item"
                    android:focusable="true"
                    android:padding="@dimen/default_padding"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:tint="@color/colorPrimaryDark" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/purchase_detail_margin_start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:text="@string/purchase_term" />

                <TextView
                    android:id="@+id/tv_purchase_term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:textColor="@android:color/black"
                    tools:text="25 days" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/purchase_detail_margin_start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:text="@string/next_purchase_date" />

                <TextView
                    android:id="@+id/tv_next_purchase_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:textColor="@android:color/black"
                    tools:text="20-07-15 (D-5)" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_padding">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="invisible"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tv_refresh_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_padding"
                    android:gravity="center"
                    android:text="@string/refresh_message"
                    android:textSize="@dimen/message_text_size" />

                <ImageView
                    android:id="@+id/iv_refresh"
                    android:layout_width="@dimen/refresh_button_size"
                    android:layout_height="@dimen/refresh_button_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_padding"
                    android:contentDescription="@string/refresh"
                    android:src="@drawable/ic_baseline_refresh_24"
                    android:tint="@color/colorPrimary" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_width="@dimen/progressbar_size"
                android:layout_height="@dimen/progressbar_size"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>
    </LinearLayout>
</layout>